--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; background-image: url('./assets/coulds.jpg') }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; color: #00434c; }
+
+h1,h2,h3,h4,h5 {
+  font-weight: 400;
+}
