--- a/src/app/common/list/list.component.css
+++ b/src/app/common/list/list.component.css
@@ -2,7 +2,7 @@
   display: block;
   width: 400px;
   background-color: white;
-  box-shadow: 0 4px 2rem #00000020;
+  box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.1);
   border-radius: 0.2rem;
   overflow: hidden;
 }
