--- a/src/app/content/example-list/cats/cat/cat.component.css
+++ b/src/app/content/example-list/cats/cat/cat.component.css
@@ -7,7 +7,7 @@
   padding: 1rem;
   background-color: lightyellow;
   border-radius: 0.2rem;
-  box-shadow: 0 2px 4px #0000001a;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .image {
@@ -31,5 +31,14 @@
 
 .description {
   grid-column-start: 2;
+  color: #888;
+}
+
+.buttons {
+  grid-column-start: 2;
+  text-align: right;
+}
+
+button {
   color: #888;
 }
