--- a/src/app/content/example-list/dogs/dog/dog.component.css
+++ b/src/app/content/example-list/dogs/dog/dog.component.css
@@ -5,11 +5,16 @@
   grid-column-gap: 1rem;
   margin: 1rem;
   padding: 1rem;
-  background: #a0e7e4;
+  background-color: #a0e7e4;
   border-radius: 1rem;
-  box-shadow: 0 2px 4px #0000001a;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   border: 1px solid lightcyan;
-  transform: rotate(4deg);
+  cursor: pointer;
+  transition: background-color ease-out 200ms, box-shadow ease-out 200ms;
+}
+:host:hover {
+  background-color: #82c7c5;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 }
 
 .image {
@@ -18,6 +23,7 @@
   width: 5rem;
   height: 5rem;
   overflow: hidden;
+  border: 1px solid lightcyan;
   border-radius: 0.2rem;
 }
 
@@ -36,5 +42,5 @@
 .description {
   grid-column-start: 1;
   grid-row-start: 2;
-  color: lightseagreen;
+  color: white;
 }
