--- a/src/app/common/code-section/code-section.component.css
+++ b/src/app/common/code-section/code-section.component.css
@@ -5,7 +5,7 @@
 }
 
 .filename span {
-  background: #007f82;
+  background: var(--primary);
   color: white;
   padding: 0.3rem;
   border-radius: 0.2rem;
@@ -15,9 +15,8 @@
 pre {
   background-color: white;
   padding: 1rem;
-  margin: 4rem 1rem;
   border-radius: 0.3rem;
   font-size: 1rem;
-  color: #007f82;
+  color: var(--primary);
   box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.1);
 }
