Refactor Expandable-icon

--- a/src/app/content/example-list/example-list.component.html
+++ b/src/app/content/example-list/example-list.component.html
@@ -1,12 +1,12 @@
 <div class="content">
   <h1>Generic lists in Angular</h1>
 
-  <div class="github">
-    <a href="https://github.com/Arthoo/AngularExamples">
-      <img src="./assets/github.png" />
-      <span>Source code on Github</span>
-    </a>
-  </div>
+  <app-expandable-icon
+    [icon]="'./assets/github.png'"
+    [text]="'Source code on Github'"
+    [link]="'https://github.com/Arthoo/AngularExamples'"
+  >
+  </app-expandable-icon>
 
   <p>
     In this example you will see how we can create a list component where we can
