--- a/src/app/content/example-list/example-list.component.html
+++ b/src/app/content/example-list/example-list.component.html
@@ -1,12 +1,15 @@
 <div class="content">
-  <h1>Generic lists in Angular</h1>
-
-  <app-expandable-icon
-    [icon]="'./assets/github.png'"
-    [text]="'Source code on Github'"
-    [link]="'https://github.com/Arthoo/AngularExamples'"
-  >
-  </app-expandable-icon>
+  <div class="example-title">
+    <h1>Generic lists in Angular</h1>
+    <div class="example-icon">
+      <app-expandable-icon
+        [icon]="'./assets/github.png'"
+        [text]="'Source code on Github'"
+        [link]="'https://github.com/Arthoo/AngularExamples'"
+      >
+      </app-expandable-icon>
+    </div>
+  </div>
 
   <p>
     In this example you will see how we can create a list component where we can
