--- a/src/app/content/example-list/example-list.component.css
+++ b/src/app/content/example-list/example-list.component.css
@@ -10,6 +10,6 @@
 
 .lists {
   display: grid;
-  grid-auto-flow: column;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   gap: 2rem;
 }
