--- a/src/app/common/code-section/code-section.component.html
+++ b/src/app/common/code-section/code-section.component.html
@@ -1,3 +1,3 @@
 <code>
-  <pre><div class="filename"><span>{{ filename }}</span></div>{{ code }}</pre>
+  <pre><div class="filename"><span>{{ filename }}</span></div><div class="code">{{ code }}</div></pre>
 </code>
