--- a/src/styles.css
+++ b/src/styles.css
@@ -39,3 +39,12 @@ p {
 .content > * {
   margin-bottom: 3rem;
 }
+
+.floating-container {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 0.3rem;
+  font-size: 1rem;
+  color: var(--primary);
+  box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.1);
+}
