--- a/src/app/content/example-list/example-list.component.html
+++ b/src/app/content/example-list/example-list.component.html
@@ -69,4 +69,8 @@
     [code]="code.cats"
     [filename]="'cats.component.html'"
   ></app-code-section>
+
+  <p>
+    See full source code on <a href="https://github.com/Arthoo/AngularExamples">Github</a>.
+  </p>
 </div>
