--- a/src/app/common/code-section/code-section.component.html
+++ b/src/app/common/code-section/code-section.component.html
@@ -1,3 +1,3 @@
 <code>
-  <pre class="floating-container"><div class="filename"><span>{{ filename }}</span></div><div class="code">{{ code }}</div></pre>
+  <pre class="floating-container"><div class="filename" *ngIf="filename"><span>{{ filename }}</span></div><div class="code">{{ code }}</div></pre>
 </code>
